src/panda/date/strptime.cc

#line 1 "src/panda/date/strptime.rl"
#include "Date.h"
#include <string.h>

#define NSAVE(dest) { dest = acc; acc = 0; }

enum class WeekInterpretation { none = 2, iso = 1, monday = 0, sunday = -7 };

namespace panda { namespace date {

struct MetaConsume {
    int cs;
    int consumed;
};


#line 95 "src/panda/date/strptime.rl"



#line 23 "src/panda/date/strptime.cc"
static const int parser_start = 178;
static const int parser_first_final = 178;
static const int parser_error = 0;

static const int parser_en_p_AMPM = 1;
static const int parser_en_p_ampm = 4;
static const int parser_en_p_sec = 7;
static const int parser_en_p_min = 9;
static const int parser_en_p_hour = 11;
static const int parser_en_p_hour_s = 13;
static const int parser_en_p_hour_min = 15;
static const int parser_en_p_hms = 20;
static const int parser_en_p_hmsAMPM = 28;
static const int parser_en_p_mdy = 40;
static const int parser_en_p_ymd = 48;
static const int parser_en_p_mdyhms = 58;
static const int parser_en_p_day = 75;
static const int parser_en_p_day3 = 77;
static const int parser_en_p_day_void = 80;
static const int parser_en_p_wday = 82;
static const int parser_en_p_wday_s = 83;
static const int parser_en_p_wname = 84;
static const int parser_en_p_wnum = 119;
static const int parser_en_p_month = 121;
static const int parser_en_p_mname = 123;
static const int parser_en_p_year = 169;
static const int parser_en_p_yr = 173;
static const int parser_en_p_cent = 175;
static const int parser_en_p_perc = 177;
static const int parser_en_p_space = 178;


#line 98 "src/panda/date/strptime.rl"

static inline int _parse_str(int cs, const char* p, const char* pe, int& week, datetime& _date)  {
    // printf("_parse_str cs=%d\n", cs);
    const char* pb  = p;
    const char* eof = pe;
    uint64_t    acc = 0;

    
#line 65 "src/panda/date/strptime.cc"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
st178:
	if ( ++p == pe )
		goto _test_eof178;
case 178:
	if ( (*p) == 32 )
		goto st178;
	goto st0;
st0:
cs = 0;
	goto _out;
case 1:
	switch( (*p) ) {
		case 65: goto st2;
		case 80: goto st3;
	}
	goto st0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) == 77 )
		goto tr3;
	goto st0;
tr3:
#line 35 "src/panda/date/strptime.rl"
	{ {p++; cs = 179; goto _out;} }
	goto st179;
tr4:
#line 28 "src/panda/date/strptime.rl"
	{ _date.hour += 12;         }
#line 35 "src/panda/date/strptime.rl"
	{ {p++; cs = 179; goto _out;} }
	goto st179;
st179:
	if ( ++p == pe )
		goto _test_eof179;
case 179:
#line 108 "src/panda/date/strptime.cc"
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 77 )
		goto tr4;
	goto st0;
case 4:
	switch( (*p) ) {
		case 97: goto st5;
		case 112: goto st6;
	}
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 109 )
		goto tr7;
	goto st0;
tr7:
#line 35 "src/panda/date/strptime.rl"
	{ {p++; cs = 180; goto _out;} }
	goto st180;
tr8:
#line 28 "src/panda/date/strptime.rl"
	{ _date.hour += 12;         }
#line 35 "src/panda/date/strptime.rl"
	{ {p++; cs = 180; goto _out;} }
	goto st180;
st180:
	if ( ++p == pe )
		goto _test_eof180;
case 180:
#line 144 "src/panda/date/strptime.cc"
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 109 )
		goto tr8;
	goto st0;
case 7:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr9;
	goto st0;
tr9:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 168 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr10;
	goto st0;
tr10:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 25 "src/panda/date/strptime.rl"
	{ NSAVE(_date.sec);         }
#line 35 "src/panda/date/strptime.rl"
	{ {p++; cs = 181; goto _out;} }
	goto st181;
st181:
	if ( ++p == pe )
		goto _test_eof181;
case 181:
#line 187 "src/panda/date/strptime.cc"
	goto st0;
case 9:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr11;
	goto st0;
tr11:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 204 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr12;
	goto st0;
tr12:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 26 "src/panda/date/strptime.rl"
	{ NSAVE(_date.min);         }
#line 35 "src/panda/date/strptime.rl"
	{ {p++; cs = 182; goto _out;} }
	goto st182;
st182:
	if ( ++p == pe )
		goto _test_eof182;
case 182:
#line 223 "src/panda/date/strptime.cc"
	goto st0;
case 11:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr13;
	goto st0;
tr13:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 240 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr14;
	goto st0;
tr14:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 27 "src/panda/date/strptime.rl"
	{ NSAVE(_date.hour);        }
#line 35 "src/panda/date/strptime.rl"
	{ {p++; cs = 183; goto _out;} }
	goto st183;
st183:
	if ( ++p == pe )
		goto _test_eof183;
case 183:
#line 259 "src/panda/date/strptime.cc"
	goto st0;
case 13:
	if ( (*p) == 32 )
		goto st14;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr16;
	goto st0;
tr16:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 278 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr17;
	goto st0;
tr17:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 27 "src/panda/date/strptime.rl"
	{ NSAVE(_date.hour);        }
#line 35 "src/panda/date/strptime.rl"
	{ {p++; cs = 184; goto _out;} }
	goto st184;
st184:
	if ( ++p == pe )
		goto _test_eof184;
case 184:
#line 297 "src/panda/date/strptime.cc"
	goto st0;
case 15:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr18;
	goto st0;
tr18:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 314 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr19;
	goto st0;
tr19:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 27 "src/panda/date/strptime.rl"
	{ NSAVE(_date.hour);        }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 331 "src/panda/date/strptime.cc"
	if ( (*p) == 58 )
		goto st18;
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr21;
	goto st0;
tr21:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 353 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr22;
	goto st0;
tr22:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 26 "src/panda/date/strptime.rl"
	{ NSAVE(_date.min);         }
#line 35 "src/panda/date/strptime.rl"
	{ {p++; cs = 185; goto _out;} }
	goto st185;
st185:
	if ( ++p == pe )
		goto _test_eof185;
case 185:
#line 372 "src/panda/date/strptime.cc"
	goto st0;
case 20:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr23;
	goto st0;
tr23:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st21;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
#line 389 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr24;
	goto st0;
tr24:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 27 "src/panda/date/strptime.rl"
	{ NSAVE(_date.hour);        }
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 406 "src/panda/date/strptime.cc"
	if ( (*p) == 58 )
		goto st23;
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr26;
	goto st0;
tr26:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st24;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
#line 428 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr27;
	goto st0;
tr27:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 26 "src/panda/date/strptime.rl"
	{ NSAVE(_date.min);         }
	goto st25;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
#line 445 "src/panda/date/strptime.cc"
	if ( (*p) == 58 )
		goto st26;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr29;
	goto st0;
tr29:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st27;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
#line 467 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr30;
	goto st0;
tr30:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 25 "src/panda/date/strptime.rl"
	{ NSAVE(_date.sec);         }
#line 35 "src/panda/date/strptime.rl"
	{ {p++; cs = 186; goto _out;} }
	goto st186;
st186:
	if ( ++p == pe )
		goto _test_eof186;
case 186:
#line 486 "src/panda/date/strptime.cc"
	goto st0;
case 28:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr31;
	goto st0;
tr31:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st29;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
#line 503 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr32;
	goto st0;
tr32:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 27 "src/panda/date/strptime.rl"
	{ NSAVE(_date.hour);        }
	goto st30;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
#line 520 "src/panda/date/strptime.cc"
	if ( (*p) == 58 )
		goto st31;
	goto st0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr34;
	goto st0;
tr34:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st32;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
#line 542 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr35;
	goto st0;
tr35:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 26 "src/panda/date/strptime.rl"
	{ NSAVE(_date.min);         }
	goto st33;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
#line 559 "src/panda/date/strptime.cc"
	if ( (*p) == 58 )
		goto st34;
	goto st0;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr37;
	goto st0;
tr37:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st35;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
#line 581 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr38;
	goto st0;
tr38:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 25 "src/panda/date/strptime.rl"
	{ NSAVE(_date.sec);         }
	goto st36;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
#line 598 "src/panda/date/strptime.cc"
	if ( (*p) == 32 )
		goto st37;
	goto st0;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
	switch( (*p) ) {
		case 32: goto st37;
		case 65: goto st38;
		case 80: goto st39;
	}
	goto st0;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
	if ( (*p) == 77 )
		goto tr42;
	goto st0;
tr42:
#line 35 "src/panda/date/strptime.rl"
	{ {p++; cs = 187; goto _out;} }
	goto st187;
tr43:
#line 28 "src/panda/date/strptime.rl"
	{ _date.hour += 12;         }
#line 35 "src/panda/date/strptime.rl"
	{ {p++; cs = 187; goto _out;} }
	goto st187;
st187:
	if ( ++p == pe )
		goto _test_eof187;
case 187:
#line 633 "src/panda/date/strptime.cc"
	goto st0;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
	if ( (*p) == 77 )
		goto tr43;
	goto st0;
case 40:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr44;
	goto st0;
tr44:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st41;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
#line 657 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr45;
	goto st0;
tr45:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 34 "src/panda/date/strptime.rl"
	{ _date.mon = acc - 1; acc = 0; }
	goto st42;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
#line 674 "src/panda/date/strptime.cc"
	if ( (*p) == 47 )
		goto st43;
	goto st0;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr47;
	goto st0;
tr47:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st44;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
#line 696 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr48;
	goto st0;
tr48:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 29 "src/panda/date/strptime.rl"
	{ NSAVE(_date.mday);        }
	goto st45;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
#line 713 "src/panda/date/strptime.cc"
	if ( (*p) == 47 )
		goto st46;
	goto st0;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr50;
	goto st0;
tr50:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st47;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
#line 735 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr51;
	goto st0;
tr51:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 37 "src/panda/date/strptime.rl"
	{
        if (acc <= 50) _date.year = 2000 + acc;
        else           _date.year = 1900 + acc;
        acc = 0;
    }
#line 35 "src/panda/date/strptime.rl"
	{ {p++; cs = 188; goto _out;} }
	goto st188;
st188:
	if ( ++p == pe )
		goto _test_eof188;
case 188:
#line 758 "src/panda/date/strptime.cc"
	goto st0;
case 48:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr52;
	goto st0;
tr52:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st49;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
#line 775 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr53;
	goto st0;
tr53:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st50;
st50:
	if ( ++p == pe )
		goto _test_eof50;
case 50:
#line 790 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr54;
	goto st0;
tr54:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st51;
st51:
	if ( ++p == pe )
		goto _test_eof51;
case 51:
#line 805 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr55;
	goto st0;
tr55:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 24 "src/panda/date/strptime.rl"
	{ NSAVE(_date.year);        }
	goto st52;
st52:
	if ( ++p == pe )
		goto _test_eof52;
case 52:
#line 822 "src/panda/date/strptime.cc"
	if ( (*p) == 45 )
		goto st53;
	goto st0;
st53:
	if ( ++p == pe )
		goto _test_eof53;
case 53:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr57;
	goto st0;
tr57:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st54;
st54:
	if ( ++p == pe )
		goto _test_eof54;
case 54:
#line 844 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr58;
	goto st0;
tr58:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 34 "src/panda/date/strptime.rl"
	{ _date.mon = acc - 1; acc = 0; }
	goto st55;
st55:
	if ( ++p == pe )
		goto _test_eof55;
case 55:
#line 861 "src/panda/date/strptime.cc"
	if ( (*p) == 45 )
		goto st56;
	goto st0;
st56:
	if ( ++p == pe )
		goto _test_eof56;
case 56:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr60;
	goto st0;
tr60:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st57;
st57:
	if ( ++p == pe )
		goto _test_eof57;
case 57:
#line 883 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr61;
	goto st0;
tr61:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 29 "src/panda/date/strptime.rl"
	{ NSAVE(_date.mday);        }
#line 35 "src/panda/date/strptime.rl"
	{ {p++; cs = 189; goto _out;} }
	goto st189;
st189:
	if ( ++p == pe )
		goto _test_eof189;
case 189:
#line 902 "src/panda/date/strptime.cc"
	goto st0;
case 58:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr62;
	goto st0;
tr62:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st59;
st59:
	if ( ++p == pe )
		goto _test_eof59;
case 59:
#line 919 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr63;
	goto st0;
tr63:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 34 "src/panda/date/strptime.rl"
	{ _date.mon = acc - 1; acc = 0; }
	goto st60;
st60:
	if ( ++p == pe )
		goto _test_eof60;
case 60:
#line 936 "src/panda/date/strptime.cc"
	if ( (*p) == 47 )
		goto st61;
	goto st0;
st61:
	if ( ++p == pe )
		goto _test_eof61;
case 61:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr65;
	goto st0;
tr65:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st62;
st62:
	if ( ++p == pe )
		goto _test_eof62;
case 62:
#line 958 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr66;
	goto st0;
tr66:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 29 "src/panda/date/strptime.rl"
	{ NSAVE(_date.mday);        }
	goto st63;
st63:
	if ( ++p == pe )
		goto _test_eof63;
case 63:
#line 975 "src/panda/date/strptime.cc"
	if ( (*p) == 47 )
		goto st64;
	goto st0;
st64:
	if ( ++p == pe )
		goto _test_eof64;
case 64:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr68;
	goto st0;
tr68:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st65;
st65:
	if ( ++p == pe )
		goto _test_eof65;
case 65:
#line 997 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr69;
	goto st0;
tr69:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 37 "src/panda/date/strptime.rl"
	{
        if (acc <= 50) _date.year = 2000 + acc;
        else           _date.year = 1900 + acc;
        acc = 0;
    }
	goto st66;
st66:
	if ( ++p == pe )
		goto _test_eof66;
case 66:
#line 1018 "src/panda/date/strptime.cc"
	if ( (*p) == 32 )
		goto st67;
	goto st0;
st67:
	if ( ++p == pe )
		goto _test_eof67;
case 67:
	if ( (*p) == 32 )
		goto st67;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr71;
	goto st0;
tr71:
#line 18 "src/panda/date/strptime.rl"
	{
        acc *= 10;
